<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/history_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/list_item_history_date"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/history_winning_rowcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_toRightOf="@id/history_date"
        android:text="@string/list_item_winning_rowcount"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/history_ball1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="1"
        android:maxEms="2"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/history_winning_rowcount"
        android:padding="8dp"
        android:text="@string/list_item_ball1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/history_ball2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="1"
        android:maxEms="2"
        android:layout_toRightOf="@id/history_ball1"
        android:layout_below="@id/history_winning_rowcount"
        android:padding="8dp"
        android:text="@string/list_item_ball2"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/history_ball3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="1"
        android:maxEms="2"
        android:padding="8dp"
        android:text="@string/list_item_ball3"
        android:textStyle="bold"
        android:layout_below="@+id/history_winning_rowcount"
        android:layout_toRightOf="@+id/history_ball2"
        android:layout_toEndOf="@+id/history_ball2" />

    <TextView
        android:id="@+id/history_ball4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="1"
        android:maxEms="2"
        android:padding="8dp"
        android:text="@string/list_item_ball4"
        android:textStyle="bold"
        android:layout_below="@+id/history_winning_rowcount"
        android:layout_toRightOf="@+id/history_ball3"
        android:layout_toEndOf="@+id/history_ball3" />

    <TextView
        android:id="@+id/history_ball5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="1"
        android:maxEms="2"
        android:padding="8dp"
        android:text="@string/list_item_ball5"
        android:textStyle="bold"
        android:layout_below="@+id/history_winning_rowcount"
        android:layout_toRightOf="@+id/history_ball4"
        android:layout_toEndOf="@+id/history_ball4" />

    <TextView
        android:id="@+id/history_lucky_star1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="1"
        android:maxEms="2"
        android:padding="8dp"
        android:text="@string/list_item_luckystar1"
        android:textStyle="bold"
        android:layout_below="@+id/history_winning_rowcount"
        android:layout_toRightOf="@+id/history_ball5"
        android:layout_toEndOf="@+id/history_ball5" />

    <TextView
        android:id="@+id/history_lucky_star2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="1"
        android:maxEms="2"
        android:padding="8dp"
        android:text="@string/list_item_luckystar2"
        android:textStyle="bold"
        android:layout_below="@+id/history_winning_rowcount"
        android:layout_toRightOf="@+id/history_lucky_star1"
        android:layout_toEndOf="@+id/history_lucky_star1" />

</RelativeLayout>

