<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="left|top">

        <TextView
            android:id="@+id/screen_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/title_section6" />

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_gravity="left" />

        <RadioGroup
            android:id="@+id/lottery_choice_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_below="@+id/spinner">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lotto"
                android:id="@+id/rbLotto" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EuroMillions"
                android:id="@+id/rbEuroMillions" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thunderball"
                android:id="@+id/rbThunderball" />
        </RadioGroup>

        <TextView
            android:id="@+id/day_choice"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/day_choice"
            android:layout_below="@+id/lottery_choice_group"
            android:visibility="invisible"/>

        <RadioGroup
            android:id="@+id/lotto_days_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/day_choice"
            android:visibility="invisible">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lotto_day_one"
                android:id="@+id/rbLottoWednesday" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lotto_day_two"
                android:id="@+id/rbLottoSaturday" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/euro_days_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/day_choice"
            android:visibility="invisible">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro_day_one"
                android:id="@+id/rbEuroTuesday" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro_day_two"
                android:id="@+id/rbEuroFriday" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/tball_days_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/day_choice"
            android:visibility="invisible">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thunderball_day_one"
                android:id="@+id/rbTballWednesday" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thunderball_day_two"
                android:id="@+id/rbTballFriday" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thunderball_day_three"
                android:id="@+id/rbTballSaturday" />
        </RadioGroup>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/syndicate_name_hint"
            android:ems="60"
            android:id="@+id/syndicateNameText"
            android:layout_below="@+id/tball_days_group"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:visibility="invisible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/btn_save"
            android:id="@+id/btnSave"
            android:layout_below="@+id/syndicateNameText"
            android:layout_alignParentStart="true"

            android:visibility="invisible"/>
        <!--android:layout_marginTop="50dp"-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/btn_cancel"
            android:id="@+id/btnCancel"
            android:layout_below="@+id/syndicateNameText"
            android:layout_alignBottom="@+id/btnSave"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"/>

    </RelativeLayout>


</FrameLayout>
